# DataEnWatNu

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  pytest-ci.ini  pytest.ini  requirements.txt
docs/: design.md
docs/figures/sources/: erd.drawio
logs/: APP_NAME.log.1  APP_NAME.log.10  APP_NAME.log.3  APP_NAME.log.5  APP_NAME.log.7  APP_NAME.log.9
migrations/versions/: 0dafc6d9292d_added_reversed_score_field_to_question_.py  4575217141c4_added_code_model.py  48a3b8b0c0bb_added_code_used_and_list_selected_field_.py  49301064e852_added_company_and_email_to_case_model.py  572b5bc1fc2b_initial_migration.py  6520f1f62501_added_weights_to_question_and_group.py  6e0b582c34af_added_branch_company_size_and_.py  82cebf97546b_added_value_column_to_likertoption.py  92d3b23fc253_added_questionlist_model.py  b37ecb1ddd8a_added_group_to_answer_table.py  b6dc8d9ae1da_initial_migration.py  f2c49fd52f8c_added_likertoption_table.py  f8ba41ac9536_added_scoretext_model.py
src/: app.py  commands.py  config.py  errors.py  models.py  settings.py  utils.py
src/blueprints/main/: routes.py
src/blueprints/questions/: __init__.py  email.py  forms.py  report_generator.py  routes.py
src/templates/: _nav.html  advice.html  base.html  form.html  index.html  intro.html  likert.html  login.html
tests/: conftest.py
tests/_fixtures/: __init__.py  model_fixtures.py
tests/unit/: test_commands.py  test_errors.py  test_forms.py  test_models.py  test_utils.py
tools/: fill_db.py  generate_radar_plot.py
(+21 files in other folders)
